--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ workoutLength = 20*60000;
   percentage = 0;
   function percentageDone(){
     setInterval(function(){
-      document.getElementById("percentageDone").innerHTML = percentage +"%";
+      document.getElementById("percentageDone").innerHTML = percentage +"% complete";
       percentage++;
     },
     (workoutLength/100)
