--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ features to come:
   <p>b: in seconds, how long you want each break between exercise to last, eg 30</p>
   <p>w: in minutes, how long you want the session to last, eg 20</p>
 
-  <script type="text/javascript" src="https://tonejs.github.io/build/Tone.min.js"></script>
-
+  <!--<script type="text/javascript" src="https://tonejs.github.io/build/Tone.min.js"></script>
+-->
 
 <script>
     //audioContext = new AudioContext();
@@ -168,12 +168,12 @@ features to come:
         events[masterTime].message ? message = events[masterTime].message : null;
         events[masterTime].message === "Complete" ? workoutComplete = true : null;
         events[masterTime].countDownValue ? countDownTime = events[masterTime].countDownValue : null;
-        events[masterTime].sound === "beep" ? synth.triggerAttackRelease('C4', '4n') : null;
+        //events[masterTime].sound === "beep" ? synth.triggerAttackRelease('C4', '4n') : null;
 
 
       }
       masterTime === initialCountDown ? percentageDone() : null;
-      countDownTime <= 5 ? synth.triggerAttackRelease('E4', '64n') : null;
+      //countDownTime <= 5 ? synth.triggerAttackRelease('E4', '64n') : null;
 
       document.getElementById("clock").innerHTML=countDownTime;
       document.getElementById("message").innerHTML=message;
@@ -208,7 +208,7 @@ features to come:
     }
 }
 
-    var synth = new Tone.Synth().toMaster()
+    //var synth = new Tone.Synth().toMaster()
     percentage = 0;
 
     function percentageDone(){
