updates message in light of params not really working

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ features to come:
 
 
   <div id=message>
-    You seem to be using a rubbish browser and/or an iPhone. This website won't make any sense, sorry. Working on it, a bit, maybe.
+    Welcome
   </div>
   <div id=clock>
   </div>
@@ -59,8 +59,6 @@ features to come:
 
 <script>
     var url = new URL(window.location.href);
-    document.getElementById("message").innerHTML="Welcome - please consider setting url parameters to customise your workout";
-
     todayExercises = ["Mountain Climber","Squatty Floor Touch","Snakey Dog Pressups","Punchy Boys","High Knees!!"];
     breakLength = 30;
     exerciseLength = 30;
