changes sounds to be louder on mobile

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 
 features to come:
-  actual ui instead of params to try and get this working on iphone
+  actual ui instead of params to try and get this working on iphonefor consistent experience on all browsers
   move away from setInterval entirely and towards webworker https://stackoverflow.com/questions/5927284/how-can-i-make-setinterval-also-work-when-a-tab-is-inactive-in-chrome
   robot voice or your own voice clips to say the messages
   choose how many pips (and set pips lower if people do super short exercises)
@@ -168,11 +168,11 @@ features to come:
         events[masterTime].message ? message = events[masterTime].message : null;
         events[masterTime].message === "Complete" ? workoutComplete = true : null;
         events[masterTime].countDownValue ? countDownTime = events[masterTime].countDownValue : null;
-        events[masterTime].sound === "beep" ? synth.triggerAttackRelease('C4', '4n') : null;
+        events[masterTime].sound === "beep" ? beep() : null;
 
       }
       masterTime === initialCountDown ? percentageDone() : null;
-      countDownTime <= 5 ? synth.triggerAttackRelease('E4', '64n') : null;
+      countDownTime <= 5 ? pip() : null;
 
       document.getElementById("clock").innerHTML=countDownTime;
       document.getElementById("message").innerHTML=message;
@@ -209,7 +209,16 @@ features to come:
       }
     }
 
-    var synth = new Tone.Synth().toMaster()
+    var synth = new Tone.PolySynth().toMaster()
+
+    function pip(){
+      synth.triggerAttackRelease('E4', '64n');
+      synth.triggerAttackRelease('E5', '64n');
+    }
+    function beep(){
+      synth.triggerAttackRelease('C4', '4n');
+      synth.triggerAttackRelease('C6', '4n');
+    }
     percentage = 0;
 
     function percentageDone(){
